# arritmic3d

./: .gitignore  CHANGELOG.md  pyproject.toml
docs/: index.html  index.qmd
mk/: devel.mk
restitutionModels/: Core.csv  config_TenTuscher_APD.csv  config_TenTuscher_CV.csv  config_TorOrd_APD.csv  config_TorOrd_CV.csv
src/: action_potential_rs.h  basic_tissue.h  bindings.cpp  conduction_velocity.h  node.cpp  node.h  node_parameters.h  tissue.h
src/arritmic3d/: arr3D_activations.py  arr3D_build_slab.py  arr3D_config.py  arr3D_sensor.py  arritmic3D.py
test/: compare.py  ensight_exporter.py  ensight_exporter_unstructured.py  plot_functions.py  test.py  test2.cpp  test_arritmic3d.py  test_models.py  test_reentry.py  test_reentry_disc.py  test_reentry_rotor.py  test_ventricle.py  test_ventricle_ensight.py  test_wire_small.py
tools/: curve2surf.py
